[gd_scene load_steps=6 format=2]

[ext_resource path="res://Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/Kenny/PNG/Man Blue/manBlue_gun.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 20 )

[sub_resource type="CircleShape2D" id=2]
radius = 180.044

[node name="Enemy" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )

[node name="Body" parent="." index="0"]
texture = ExtResource( 3 )
offset = Vector2( 10, 0 )

[node name="Muzzle" parent="Body" index="0"]
position = Vector2( 38, 10 )

[node name="CollisionShape2D" parent="." index="1"]
visible = false
shape = SubResource( 1 )

[node name="DetectRadius" type="Area2D" parent="." index="2"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius" index="0"]
shape = SubResource( 2 )
[connection signal="body_entered" from="DetectRadius" to="." method="_on_DetectRadius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_DetectRadius_body_exited"]
